--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "packages/*"
   ],
   "scripts": {
-    "dev:web": "npm run dev -w apps/web",
-    "dev:api": "npm run start:dev -w apps/api"
+    "dev:web": "PORT=3000 npm run dev -w apps/web",
+    "dev:api": "PORT=3001 npm run start:dev -w apps/api"
   },
   "keywords": [],
   "author": "",
