--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -23,6 +23,8 @@
     "@nestjs/common": "^11.0.1",
     "@nestjs/core": "^11.0.1",
     "@nestjs/platform-express": "^11.0.1",
+    "dotenv": "^17.2.3",
+    "openai": "^6.15.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
   },
